# gdl

./: .gitignore  CMakeLists.txt  gen_proj_files.bat
include/: gdl.h
src/: #thread.h#  .#thread.h  CMakeLists.txt  bit.h  ecs.cpp  ecs.h  file.h  gdlmath.cpp  gdlmath.h  hash.h  hash_table.cpp  hash_table.h  input.h  main.cpp  matrix.cpp  matrix.h  mem.h  memory.h  msg.h  pch.h  quat.cpp  quat.h  sid.h  sparse_set.cpp  sparse_set.h  str.h  sys.h  thread.h  time.h  uid.h  vector.h  win.h  win32_file.cpp  win32_input.cpp  win32_mem.cpp  win32_memory.cpp  win32_msg.cpp  win32_str.cpp  win32_sys.cpp  win32_thread.cpp  (+10 more)
src/math/: gdlmath.cpp  matrix.h  quat.cpp  quat.h
src/win32/: win32_file.cpp  win32_mem.cpp  win32_str.cpp  win32_thread.cpp  win32_time.cpp  win32_win.cpp
